--- a/client/src/components/Entry.css
+++ b/client/src/components/Entry.css
@@ -1,13 +1,28 @@
 .entry {
-
+  text-align: left;
 }
 
 a {
   color: #4a4a4a;
   text-decoration: none;
 }
+a:hover {
+  color: #6a6b6c;
+  text-decoration: underline;
+}
 
 h2 {
   font-family: helvetica, arial, sans-serif;
-  font-size: 18pt;
+  font-size: 21pt;
+}
+
+h4 {
+  font-size: 12pt;
+  color: #999;
+}
+
+p {
+  color: #6a6c6b;
+  font-size: 14pt;
+  list-style: 24pt;
 }
