Add Feature: renders article image

--- a/client/src/components/Entry.css
+++ b/client/src/components/Entry.css
@@ -1,5 +1,13 @@
-.entry {
+.feed-story {
   text-align: left;
+}
+.feed-story__img-wrap {
+  max-height: 167px;
+  overflow: hidden;
+}
+
+.feed-story__img {
+  width: 100%;
 }
 
 a {
