--- a/client/src/components/Entry.css
+++ b/client/src/components/Entry.css
@@ -41,3 +41,14 @@ p {
   font-size: 14pt;
   list-style: 24pt;
 }
+
+.feed-story__action-bar__save {
+  color: #999;
+  cursor: pointer;
+  font-size: 10pt;
+  weight: 300;
+}
+
+.feed-story__action-bar__save:hover {
+  color: #6a6c6b;
+}
