--- a/client/src/components/Admin.css
+++ b/client/src/components/Admin.css
@@ -1,24 +1,24 @@
-.App {
+.Admin {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.Admin-logo {
+  animation: Admin-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.Admin-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.Admin-title {
   font-size: 1.5em;
 }
 
-.App-intro {
+.Admin-intro {
   font-size: large;
 }
 
