--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,16 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.wrapper {
+  margin: 86px auto;
+  max-width: 840px;
+  text-align: left;
+}
+
+.wrapper--front-page {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 25px;
+  width: 960px;
+}
