--- a/client/src/components/Admin.css
+++ b/client/src/components/Admin.css
@@ -1,28 +1,3 @@
-.Admin {
-  text-align: center;
-}
-
-.Admin-logo {
-  animation: Admin-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.Admin-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.Admin-title {
-  font-size: 1.5em;
-}
-
-.Admin-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.feed-entries {
+  width: 75%;
 }
