--- a/client/src/components/Admin.css
+++ b/client/src/components/Admin.css
@@ -1,3 +1,8 @@
-.feed-entries {
-  width: 75%;
+.admin__container {
+  display: grid;
+  grid-template-columns: 50% 33%;
+  grid-column-gap: 50px;
+  margin: 86px auto;
+  max-width: 1240px;
+  width: 90%;
 }
