--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,5 +14,6 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 25px;
+  grid-row-gap: 55px;
   width: 960px;
 }
