Add Feature: Edit Article Tags and save them in DB

--- a/client/src/components/ArticleEditor/ArticleEditor.css
+++ b/client/src/components/ArticleEditor/ArticleEditor.css
@@ -48,3 +48,14 @@ textarea {
   font-size: 12pt;
   line-height: 18pt;
 }
+
+#article-entities {
+  padding-left: 0;
+}
+
+li { display: inline-block; }
+
+li p {
+  font-size: 10pt;
+  margin: 0
+}
