--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -9,6 +9,10 @@
   overflow: hidden;
 }
 
+.post__img-wrap {
+  height: 180px;
+}
+
 .feed-entry__img {
   width: 100%;
 }
@@ -25,14 +29,14 @@ a:hover {
 h2 {
   font-family: helvetica, arial, sans-serif;
   font-size: 21pt;
-  margin-top: 5px;
+  margin-top: 10px;
   margin-bottom: 0;
 }
 
 h4 {
   color: #999;
   font-size: 12pt;
-  margin-top: 0;
+  margin-top: 5px;
   margin-bottom: 0;
 }
 
@@ -42,6 +46,11 @@ p {
   list-style: 24pt;
 }
 
+.post-entry__title { margin-top: 10px; }
+
+.post-entry__date {
+  font-size: 10pt;
+}
 .post-entry__action-bar__delete {
   color: #999;
   cursor: pointer;
@@ -51,4 +60,8 @@ p {
 
 .post-entry__action-bar__delete:hover {
   color: #6a6c6b;
+}
+
+@media screen and (max-width: 540px) {
+  .wrapper--front-page .post-entry { margin-bottom: 40px; }
 }
