Front end updates

--- a/client/src/components/FeedEntry/FeedEntry.css
+++ b/client/src/components/FeedEntry/FeedEntry.css
@@ -19,7 +19,7 @@ a:hover {
 }
 
 h2 {
-  font-family: helvetica, arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 14pt;
   margin-top: 0;
 }
