--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -27,7 +27,7 @@ a:hover {
 }
 
 h2 {
-  font-family: helvetica, arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 21pt;
   margin-top: 10px;
   margin-bottom: 0;
